--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,20 +1,59 @@
-﻿<Window x:Class="WeatherDesktop.ChooseLocationWindow"
+﻿<Window x:Class="WeatherDesktop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WeatherDesktop"
         xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Background="#FF1F1F1F">
     <Grid>
-        <m:Map x:Name="myMap" Mode="AerialWithLabels" 
+        <TabControl x:Name="MainTabContol">
+            <TabItem Loaded="WeatherLoaded" GotFocus="WeatherTabItem_GotFocus">
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <Image  Height="35" Width="35" Source="storm.png" />
+                        <TextBlock Text="Weather" Margin="2,0,0,0" VerticalAlignment="Center" FontFamily="Yu Gothic UI Semibold" FontSize="18" Foreground="#FF656565" />
+                    </StackPanel>
+                </TabItem.Header>
+                <Grid>
+                    <Image x:Name="WeatherBack" Source="day_clear.jpg" Stretch="UniformToFill"/>
+                    <TextBlock x:Name="CityNameWeather" FontStretch="UltraExpanded" Foreground="White" Margin="50,50,0,0" FontSize="25"  Text="ComeCity" FontFamily="Segoe UI Symbol"/>
+                    <TextBlock x:Name="WeatherTemperature" FontStretch="UltraExpanded" Foreground="White" Margin="100,100,100,0" FontSize="40"  HorizontalAlignment="Right" Text="+21" FontFamily="Segoe UI Symbol"/>
+                    <Image Source="Assets/Graphics/drops.png" HorizontalAlignment="Left" Margin="52, 110, 0, 0" VerticalAlignment="Top" Width="25" Height="auto"/>
+                    <TextBlock x:Name="WeatherHumidity" FontStretch="UltraExpanded" Foreground="White" Margin="80, 110, 0, 0" Text="60%" FontSize="20" Opacity="0.7" />
+                    <Image Source="Assets/Graphics/gauge.png" HorizontalAlignment="Left" Margin="52, 152, 0, 0" VerticalAlignment="Top" Width="25" Height="auto"/>
+                    <TextBlock x:Name="WeatherWind" FontStretch="UltraExpanded" Foreground="White" Margin="80, 152, 0, 0" Text="100 hPa" FontSize="20" Opacity="0.7" />
+                    <Image Source="Assets/Graphics/wind.png" HorizontalAlignment="Left" Margin="52, 194, 0, 0" VerticalAlignment="Top" Width="25" Height="auto"/>
+                    <TextBlock x:Name="WeatherPressure" FontStretch="UltraExpanded" Foreground="White" Margin="80, 194, 0, 0" Text="9.6 m/s" FontSize="20" Opacity="0.7" />
+                    <TextBlock x:Name="WeatherDeskription" FontStretch="UltraExpanded" Foreground="White" Text="Rain" Margin="0, 150, 105, 0" FontSize="20" HorizontalAlignment="Right" />
+                    <Image x:Name="WeatherIcon" Source="04d.png" Width="84" Height="84" Stretch="Uniform" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,26,100,0"/>
+                </Grid>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <Image Height="35" Width="35" Source="frame.png" />
+                        <TextBlock Text="Wallpaper" Margin="2,0,0,0" VerticalAlignment="Center" FontFamily="Yu Gothic UI Semibold" FontSize="18" Foreground="#FF656565" />
+                    </StackPanel>
+                </TabItem.Header>
+            </TabItem>
+            <TabItem>
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <Image Height="35" Width="35" Source="map.png" />
+                        <TextBlock Text="Location" Margin="2,0,0,0" VerticalAlignment="Center" FontFamily="Yu Gothic UI Semibold" FontSize="18" Foreground="#FF656565" />
+                    </StackPanel>
+                </TabItem.Header>
+                <Grid>
+                    <m:Map x:Name="myMap" Mode="AerialWithLabels" Loaded="myMap_Loaded"
                SizeChanged="Window_SizeChanged"
                ViewChangeOnFrame="myMap_ViewChangeOnFrame" 
                MouseDown="OnMyMapClick" 
-               CredentialsProvider="xR9f9QCj66ZZcVS1EaJc~0kbYWdeo1NrpOlNdxCfqKw~Ap1GgDSNL6Nebu5_so2mvusqQpfPVDl92SOPJUec2_-90rxxfJ9w21GeOYkgHCuK" 
-               Margin="0,0,-0.4,0" />
-        <TextBlock x:Name="MapPos" HorizontalAlignment="Left" VerticalAlignment="Top" Text="None" Foreground="#FFF04F4F"/>
-        <Image x:Name="MapMarker"  HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="24" Source="icons8-маркер-96.png" Margin="660,357,0,0" RenderTransformOrigin="0.5,1.001"/>
+               CredentialsProvider="xR9f9QCj66ZZcVS1EaJc~0kbYWdeo1NrpOlNdxCfqKw~Ap1GgDSNL6Nebu5_so2mvusqQpfPVDl92SOPJUec2_-90rxxfJ9w21GeOYkgHCuK" Margin="0,26,0,0" />
+                    <TextBlock x:Name="MapPos" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Yu Gothic UI Semibold" Foreground="Black" Text="Location: ????" FontSize="20"/>
+                    <Image x:Name="MapMarker" Visibility="Hidden"  HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="24" Source="Assets/Graphics/icons8-маркер-96.png" Margin="660,357,0,0" RenderTransformOrigin="0.5,1.001"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
