--- a/WeatherHome.xaml
+++ b/WeatherHome.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeatherDesktop"
+        Loaded="Window_Loaded"
         mc:Ignorable="d"
         Title="WeatherHome" Height="450" Width="800">
     <Grid>
-        
+        <Image Source="Assets\WeatherPacks\WeatherDefault\day_clear.jpg"></Image>
     </Grid>
 </Window>
